Fixed alignment of small variant checkbox and radio button "checked" states on viewports under 768px

--- a/src/forms/checkbox/_checkbox.scss
+++ b/src/forms/checkbox/_checkbox.scss
@@ -45,7 +45,7 @@
         width: 13px;
         height: 7px;
         left: 13px;
-        top: 15px;
+        top: 11px;
         border-width: 0 0 3px 3px;
     }
 
@@ -69,6 +69,10 @@
     .ds_checkbox {
         &__label::after {
             top: 10px;
+        }
+
+        &--small &__label::after {
+            top: 15px;
         }
     }
 }
