--- a/src/forms/radio/_radio.scss
+++ b/src/forms/radio/_radio.scss
@@ -18,7 +18,7 @@
     &--small &__label::after {
         border-width: 6px;
         left: 14px;
-        top: 14px;
+        top: 10px;
     }
 }
 
@@ -26,6 +26,10 @@
     .ds_radio {
         &__label::after {
             top: 10px;
+        }
+
+        &--small &__label::after {
+            top: 14px;
         }
     }
 }
